# mfem_sandbox_

./: CMakeLists.txt  LagrangeElements.hpp  README.md  config.sh  lagrange_elems_interpolation_test.cpp  lagrange_elems_laplace_solve_test.cpp  lagrange_elems_projection_test.cpp  mfem_2_vtk.cpp  modules.sh  pumi_2_mfem.cc
cmake/: Dependencies.cmake
data/: 1x1_square_mesh0.smb  1x1_square_nat.x_t  1x1_square_quad_mesh0.smb
